Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h3 data-i18n="design_minimal">Minimal Gold</h3>
           <p data-i18n="design_minimal_desc">Чистый минимализм с золотыми акцентами.</p>
           <div class="design-actions">
-            <a href="https://example.com/minimal-gold" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
+            <a href="https://akbaralievernis.github.io/wedding/" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
             <button class="btn primary" data-design-id="minimal-gold" data-i18n="select_design">Выбрать</button>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <h3 data-i18n="design_classic">Classic Love</h3>
           <p data-i18n="design_classic_desc">Элегантная классика и каллиграфия.</p>
           <div class="design-actions">
-            <a href="https://example.com/classic-love" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
+            <a href="https://akbaralievernis.github.io/wedding/" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
             <button class="btn primary" data-design-id="classic-love" data-i18n="select_design">Выбрать</button>
           </div>
         </div>
@@ -85,7 +85,7 @@
           <h3 data-i18n="design_kyrgyz">Kyrgyz Style</h3>
           <p data-i18n="design_kyrgyz_desc">Национальные орнаменты, мягкие цвета.</p>
           <div class="design-actions">
-            <a href="https://example.com/kyrgyz-style" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
+            <a href="https://akbaralievernis.github.io/wedding/" class="btn secondary" target="_blank" data-i18n="view_example">Посмотреть пример</a>
             <button class="btn primary" data-design-id="kyrgyz-style" data-i18n="select_design">Выбрать</button>
           </div>
         </div>
@@ -181,4 +181,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="app.js"></script>
 </body>
+
 </html>
